# Dining-Philosophers-Problem

./: CMakeLists.txt  README.md  main.cpp
